# agi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/: __init__.py  real_data_harness.py  regression.py  strict_harness.py
configs/: default.yaml
envs/: __init__.py  ambiguity_trap.py  non_stationary_gridworld.py  random_walk_1d.py  tmaze.py
models/: __init__.py  attractor.py  joots.py  nis.py  rssm.py
optim/: __init__.py  adaptive_optimizer.py
scripts/: check_real_benchmark_regression.py  check_runtime.py  convert_lerobot_pusht.py  run_benchmarks.py  run_finals_regression.sh  run_phase6.py  run_phase6_real_data.py  run_phases.py  run_real_benchmarks.py  tensorboard_compat.py  test_level1.py  train_real_data.py
tests/: test_attractor_spectral.py  test_benchmark_stats.py  test_datasets_pipeline.py  test_device_selection.py  test_ei_audit.py  test_env_benchmarks.py  test_jooots_detection.py  test_jooots_escape_hooks.py  test_jooots_rigor.py  test_level1_convergence.py  test_lstsq_fallback.py  test_nis_invertibility.py  test_offline_trainer.py  test_optimizer_group_scoping.py  test_phase2_training_step.py  test_phase5_feedback_plumbing.py  test_phase5_training_step.py  test_phase6_ei_proxy_audit_consistency.py  test_phase6_pipeline_smoke.py  test_phase6_real_data_smoke.py  test_phase6_sigma_ramp.py  test_real_benchmark_profiles.py  test_real_benchmark_reference_checkpoint.py  test_real_benchmark_regression.py  test_real_eval.py  test_replay_buffer.py  test_rssm_continuous.py  test_rssm_shapes.py  test_runtime_hygiene.py  test_sigma_prior_weighting.py  (+1 more)
(+230 files in other folders)
